# GoblinBarrel

./: Dockerfile  README.md  SpatialSurface.py  SteelOrConcrete.py  build.sh  discord.py  elias.py  filter_functions.py  geometry.py  handle_file.py  kaius.py  pyproject.toml  vol_filter.py
.devcontainer/: devcontainer.json
data/: modified_ifc_without_furnishings.ifc  output.ifc  please_work.ifc
help_scripts/: run.sh  run_shell.sh
necessary/: gap_detector.py  geometry.py
