[tool.poetry]
name = "goblinbarrel"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
numpy = "^2.1.3"
ifcopenshell = "^0.8.0"
mathutils = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
